--- a/projeto-techno/style.css
+++ b/projeto-techno/style.css
@@ -137,6 +137,10 @@ body {
     background: #808080;
 }
 
+.modal_btn.esgotado {
+    background: #808080;
+}
+
 .avaliacoes {
     grid-column: 2;
 }
@@ -169,4 +173,141 @@ body {
     font-size: 1rem;
     box-shadow: 0px 3px 4rem rgba(0,0,0,.1), 0px 4px 10px rgba(0,0,0,.2);
     cursor: pointer
+}
+
+/* HEADER */
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    max-width: 900px;
+    padding: 20px 0;
+    margin: 0 auto;
+}
+
+.carrinho_menu::after {
+    content:"";
+    display: inline-block;
+    background: url("./assets/carrinho.svg") no-repeat center center;
+    width: 25px;
+    height: 25px;
+    margin-left: 10px
+}
+
+.carrinho_menu {
+    display: flex;
+    align-items: flex-end;
+    cursor: pointer;
+}
+
+.logo {
+    height: 40px;
+}
+
+/* ALERTA */
+.alerta {
+    position: absolute;
+    top: 20px;
+    left: 0px;
+    z-index: 10;
+    width: 100%;
+    text-align: center;
+    display: none;
+}
+
+.alerta.ativo {
+    display: block;
+    animation: fadeInDown .3s forwards;
+}
+
+@keyframes fadeInDown {
+    from {
+        transform: translate3d(0, -30px, 0);
+        opacity: 0;
+    }
+}
+
+.alerta_mensagem {
+    background: #FFFFFF;
+    display: inline-block;
+    padding: 20px 40px;
+    border: 2px solid black;
+    box-shadow: 0 0 2rem rgba(0,0,0,.1);
+}
+
+.carrinho_modal::before {
+    content: "";
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0,0,0,.5);
+}
+
+.carrinho_modal {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    padding: 20px;
+    display: none;
+}
+
+.carrinho_modal.ativo {
+    display: block;
+}
+
+.carrinho_container {
+    position: relative;
+    margin: 80px auto;
+    background: #FFFFFF;
+    padding: 40px;
+    max-width: 800px;
+    animation: fadeinDown .3s forwards;
+}
+
+.carrinho_itens {
+    display: grid;
+    grid-template-columns: 1fr 1fr 50px;
+    border-bottom: 1px solid rgba(0,0,0,.1);
+    padding: 10px 0;
+}
+
+.carrinho_titulo {
+    margin-bottom: 10px;
+    border-bottom: 2px solid #000000;
+    padding-bottom: 20px;
+}
+
+.carrinho_remover {
+    border: none;
+    font-size: 1rem;
+    background: #FFFFFF;
+    cursor: pointer;
+}
+
+.carrinho_preco {
+    text-align: right;
+}
+
+.carrinho_total {
+    text-align: right;
+    padding: 10px 50px 10px 0;
+    border-bottom: 2px solid #000;
+}
+
+.carrinho_finalizar {
+    display: block;
+    margin-left: auto;
+    margin-top: 20px;
+    background: #000;
+    cursor: pointer;
+    color: #FFFFFF;
+    font-size: 1rem;
+    padding: 10px 25px;
+    border: none;
+    font-family: "Nono Serif"
 }
